<resources>
    <string name="app_name">TpAndroid En</string>
    <string name="drawer_open">Close</string>
    <string name="drawer_close">Open</string>
    <string name="task_name">Name of the task :</string>
    <string name="due_date">Due Date :</string>
    <string name="percentage_completion">Percentage of completion :</string>
    <string name="elapsed_time">Elapsed time :</string>
    <string name="creation_text">Creation</string>
    <string name="name_ofTask">Name of the task</string>
    <string name="add">Add</string>
    <string name="inscription">Inscription</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="homepage">Homepage</string>
    <string name="connection">Connection</string>
    <string name="username_here">Username here</string>
    <string name="password_here">Password here</string>
    <string name="task_name_item">Task name:</string>
    <string name="percentage_item">Percentage:</string>
    <string name="deadline_item">Deadline:</string>
    <string name="time_creation_item">Since creation :</string>
    <string name="menu_title_tache">Create a task</string>
    <string name="homepage_drawer">Homepage</string>
    <string name="add_task_drawer">Add task</string>
    <string name="logout">Log Out</string>
    <string name="waiting">Wait please</string>
    <string name="pls_wait">Please wait</string>
    <string name="loading">Loading</string>
    <string name="error_detail">Too much</string>
    <string name="error_usershort">Too short</string>
    <string name="error_passwshrt">Password too short</string>
    <string name="error_usertaken">User taken</string>
    <string name="no_network">No network</string>
    <string name="retry">Retry</string>
    <string name="unexpected">Unexpected error</string>
    <string name="badcredentials">Bad Credentials</string>
    <string name="serviceException">Service Exception</string>
</resources>