<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConnexionActivity">


    <TextView
        android:layout_width="300dp"
        android:layout_height="208dp"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/inscription"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="30dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_gravity="center"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/confirm_password" />


    <Button
        android:id="@+id/versAcceuil2"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/homepage"
        android:layout_gravity="center"/>






</LinearLayout>