<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/task_name_item" />

        <TextView
            android:id="@+id/tvNom"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="nom"
            android:layout_height="wrap_content" />

        <TextView

            android:layout_width="wrap_content"
            android:text="@string/percentage_item"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPourcent"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:text="pourcentage"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:text="%"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:text="@string/deadline_item"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:text="age/date"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/time_creation_item"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvCreate"
            android:layout_width="wrap_content"
            android:text="create"
            android:layout_height="wrap_content" />





    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#fff"/>

</LinearLayout>