<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:openDrawer="start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout" >
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ConnexionActivity">


        <TextView
            android:layout_width="300dp"
            android:layout_height="208dp"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/creation_text"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/taskName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/name_ofTask"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="300dp"
            android:layout_height="222dp"
            android:layout_gravity="center"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <TextView
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"/>


        <Button
            android:id="@+id/versAcceuil3"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:text="@string/add"
            android:layout_gravity="center"/>






    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer"/>


</androidx.drawerlayout.widget.DrawerLayout>